# Face-Prompt-Studio

./: .gitignore  CHANGELOG.md  FPS_MasterSnapshot_v1_6_0.txt  INSTALL_COMFYUI.md  Makefile  README.MD  README.md  __init__.py  fps_cli.py  fps_server.py  main.py  mypy.ini  pyproject.toml  requirements.txt
fps-core/: __init__.py  pyproject.toml
fps-core/ai/: __init__.py  consistency_checker.py  lora_analyzer.py  negative_learner.py  tagger_bridge.py
fps-core/backup/: __init__.py  exceptions.py  manager.py  models.py
fps-core/batch/: __init__.py  manager.py
fps-core/cache/: __init__.py  key_builder.py  lru_cache.py  manager.py  models.py
fps-core/chain/: __init__.py  manager.py
fps-core/character/: __init__.py  manager.py  models.py
fps-core/config/: __init__.py  manager.py
fps-core/dictionary/: __init__.py  exceptions.py  loader.py  manager.py  merger.py  models.py  validator.py  watcher.py
fps-core/events/: __init__.py  event_bus.py  handlers.py  models.py
fps-core/export/: __init__.py  exporters.py
fps-core/fps_logging/: __init__.py  logger.py
fps-core/history/: __init__.py  diff_viewer.py  history_manager.py  models.py
fps-core/marketplace/: __init__.py  manager.py  models.py
fps-core/optimizer/: __init__.py  combination_checker.py  conflict_detector.py  manager.py  models.py  quality_scorer.py  recommender.py  redundancy_detector.py
fps-core/pipeline/: __init__.py  category_weights.py  manager.py  models.py  stages.py
fps-core/plugins/: __init__.py  base_plugin.py  exceptions.py  loader.py  manager.py  models.py  registry.py
fps-core/preset/: __init__.py  exceptions.py  loader.py  manager.py  merger.py  models.py  version_manager.py
(+184 files in other folders)
