[project]
name            = "face-prompt-studio"
version         = "2.4.0"
description     = "Prompt Compiler & Personalization Framework for Stable Diffusion / ComfyUI"
requires-python = ">=3.11"
dependencies    = []

[project.optional-dependencies]
yaml  = ["pyyaml>=6.0"]
rest  = ["fastapi>=0.100", "uvicorn>=0.20", "pydantic>=2.0"]
dev   = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
testpaths    = ["fps-tools/tests"]
pythonpath   = ["fps-core", "fps-adapters"]
addopts      = "-v --tb=short --cov=fps-core --cov-report=term-missing --cov-fail-under=85"

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
exclude                = ["fps-tools/tests"]
